@startuml

title __SCREENS's Class Diagram__\n

  namespace com.company {
    namespace screens {
      class com.company.screens.BaseHomeScreen {
          ~ backButton : JButton
          ~ usernameLabel : JLabel
          + BaseHomeScreen()
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.BaseHomeScreen.ButtonEventListener {
          + actionPerformed()
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.BudgetOperationsScreen {
          ~ amountInput : JTextField
          ~ replenishFundsButton : JButton
          ~ sourceAccountInput : JTextField
          ~ targetAccountInput : JTextField
          ~ transferFundsButton : JButton
          ~ withdrawFundsButton : JButton
          + BudgetOperationsScreen()
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.HistoryScreen {
          ~ accountSelect : JComboBox<String>
          ~ transactionsList : JList<String>
          + HistoryScreen()
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.LoginScreen {
          ~ loginButton : JButton
          ~ passwordInput : JTextField
          ~ usernameInput : JTextField
          + LoginScreen()
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.LoginScreen.ButtonEventListener {
          + actionPerformed()
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.OperationScreen {
          ~ budgetOperationsButton : JButton
          ~ commonBalance : JLabel
          ~ getHistoryButton : JButton
          ~ ownBalance : JLabel
          ~ rulesButton : JButton
          + OperationScreen()
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.OperationScreen.ButtonEventListener {
          + ButtonEventListener()
          + actionPerformed()
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.RegistrationScreen {
          ~ passwordInput : JTextField
          ~ signUpButton : JButton
          ~ usernameInput : JTextField
          + RegistrationScreen()
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.RegistrationScreen.ButtonEventListener {
          + actionPerformed()
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.RulesScreen {
          ~ rulesSelect : JComboBox<String>
          ~ userSelect : JComboBox<String>
          + RulesScreen()
      }
    }
  }
  

  namespace com.company {
    namespace screens {
      class com.company.screens.Screen {
          + Screen()
          + setNavigator()
      }
    }
  }
  

  com.company.screens.BaseHomeScreen -up-|> com.company.screens.Screen
  com.company.screens.BaseHomeScreen +-down- com.company.screens.BaseHomeScreen.ButtonEventListener
  com.company.screens.BaseHomeScreen.ButtonEventListener .up.|> java.awt.event.ActionListener
  com.company.screens.BudgetOperationsScreen -up-|> com.company.screens.BaseHomeScreen
  com.company.screens.HistoryScreen -up-|> com.company.screens.BaseHomeScreen
  com.company.screens.LoginScreen -up-|> com.company.screens.Screen
  com.company.screens.LoginScreen +-down- com.company.screens.LoginScreen.ButtonEventListener
  com.company.screens.LoginScreen.ButtonEventListener .up.|> java.awt.event.ActionListener
  com.company.screens.OperationScreen -up-|> com.company.screens.BaseHomeScreen
  com.company.screens.OperationScreen +-down- com.company.screens.OperationScreen.ButtonEventListener
  com.company.screens.OperationScreen.ButtonEventListener .up.|> java.awt.event.ActionListener
  com.company.screens.OperationScreen.ButtonEventListener o-- com.company.Route : route
  com.company.screens.RegistrationScreen -up-|> com.company.screens.Screen
  com.company.screens.RegistrationScreen +-down- com.company.screens.RegistrationScreen.ButtonEventListener
  com.company.screens.RegistrationScreen.ButtonEventListener .up.|> java.awt.event.ActionListener
  com.company.screens.RulesScreen -up-|> com.company.screens.BaseHomeScreen
  com.company.screens.Screen -up-|> javax.swing.JPanel
  com.company.screens.Screen o-- com.company.IBudgetManager : budgetManager
  com.company.screens.Screen o-- com.company.Navigator : navigator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
